Mon Jun 30 02:31:07 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_utf8_encindex): defined.

	* include/ruby/encoding.h (rb_utf8_encindex): ditto.

Mon Jun 30 02:14:34 2008  Koichi Sasada  <ko1@atdot.net>

	* vm.c, vm_core.h,vm_core.h, vm_dump.c, iseq.c: rename class name
	  VM -> RubyVM, and rename rb_cVM -> rb_cRubyVM.
	  "VM" is too short name for class.

	* test/ruby/test_method.rb, test/ruby/test_settracefunc.rb: ditto.

	* include/ruby/ruby.h: rb_cRubyVM, rb_cEnv, rb_cISeq should not be
	  exposed.

Mon Jun 30 02:10:32 2008  Koichi Sasada  <ko1@atdot.net>

	* process.c (Init_process): fix to avoid a warning.

Mon Jun 30 01:52:05 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_parse.rb: remove tests for open_args.

Sun Jun 29 23:01:54 2008  Tanaka Akira  <akr@fsij.org>

	* string.c (rb_str_format_m): make tmp volatile to avoid possible GC
	  problem.

Sun Jun 29 18:01:30 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb, lib/rss/utils.rb: merge documents from ruby_1_8.

Sun Jun 29 17:44:23 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb (RSS::ListenerMixin#known_class): define to
	work with ruby 1.8.x too.

Sun Jun 29 17:41:42 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb (RSS::Maker::RSSBase#to_feed): raise
	exception not return nil if RSS::Maker.make can't get required
	information.
	* test/rss/rss-assertions.rb: follow the above change.

Sun Jun 29 17:37:23 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb (RSS::Maker::RSSBase#make): require block.
	* test/rss/test_maker_{0.9,1.0,2.0}.rb: follow the above change.

Sun Jun 29 17:33:34 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb, lib/rss/maker/itunes.rb: don't use
	instance_eval to initialize variables. (speed up)

Sun Jun 29 17:31:15 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb, test/rss/test_version.rb (RSS::VERSION):
	0.2.4 -> 0.2.5.

Sun Jun 29 11:36:20 2008  Yusuke Endoh  <mame@tsg.ne.jp>
